# speedybot-python

./: .gitignore  README.md  pyproject.toml  quickstart.md
speedybot/: __init__.py  speedybot.py  speedycard.py
src/speedybot/: speedybot.py
tests/: test.py
