[tool.poetry]
name = "speedybot"
version = "0.1.0"
description = ""
authors = ["Victor Algaze <valgaze@gmail.com>"]
readme = "README.md"
packages = [{include = "speedybot_python"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
