[tool.poetry]
name = "speedybot"
version = "0.5.0"
description = "Next-gen conversation design tooling, makes it speedy and easy to send messages"
authors = ["Victor Algaze <valgaze@gmail.com>"]
readme = "README.md"
packages = [
    { include = "speedybot" },
]
repository = "https://github.com/valgaze/speedybot-python"
keywords = ["bot", "speedybot", "adaptive cards"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
